fix: color contrast

--- a/src/.vuepress/theme/styles/_markdown.scss
+++ b/src/.vuepress/theme/styles/_markdown.scss
@@ -180,7 +180,7 @@
     tab-size: 4;
     hyphens: none;
     font-weight: 400;
-    color: #C0A5D9;
+    color: #eee;
 
     @screen sm {
       @apply whitespace-pre-wrap;
@@ -200,7 +200,6 @@
   div[class*=language-] { 
     @apply relative w-full whitespace-normal;
     background-color: var(--bg-code-block);
-    padding: .1em;
   }
 
   .token.block-comment,.token.cdata,.token.comment,.token.doctype,.token.prolog { color:#999 }
@@ -220,9 +219,10 @@
 
   .highlight-lines {
     @apply absolute top-0 left-0 w-full;
-    line-height: 1.3;
+    line-height: initial;
     z-index: 1;
-    padding-top: 1.35rem;
+    height: 100%;
+    padding: 1.5rem 0;
 
     .highlighted {
       background-color: rgba(0, 0, 0, .5);
